# page-analyzer

./: .env  .gitignore  .init_db.py.swn  .init_db.py.swo  .init_db.py.swp  Makefile  README.md  build.sh  database.py  database.sql  db.py  pyproject.toml  setup.cfg
.github/workflows/: main.yml
env/: pyvenv.cfg
page_analyzer/: __init__.py  app.py  db.py  validate.py
page_analyzer/static/: style.css
page_analyzer/templates/: base.html  index.html  page_404.html  show.html  urls.html
tests/: test_app.py
